--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <p id="notice" class="notice"><%= notice %></p>
+       <p id="alert" class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
