Create public_recipes and shopping list

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -16,7 +16,7 @@
           <td colspan='10'><%= food.name %></td> 
           <td><%= food.measurement_unit %></td>
           <td><%= food.price %></td>
-          <td><%= link_to 'Destroy', food_path(food), method: :delete %></td>  
+          <td><%= link_to 'Delete', food_path(food), method: :delete %></td>  
         </tr>
       <% end %>
     </tbody>
