--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,23 +1,8 @@
-<div class="container mt-3 d-flex flex-column align-items-center">
-  <h1>Your Recipes</h1>
-  <% if current_user %>
-    <%= link_to "New Recipe", new_recipe_path, class: "btn btn-primary align-self-end" %> <!-- No layout design, it will look better on navbar -->
-    <% if @recipes.empty? %>
-      <div>
-        <h3 class="text-center">No recipes yet.</h3>
-      </div>
-    <% else %>
-      <% @recipes.each do |recipe| %>
-        <div class="d-flex justify-content-center align-items-baseline gap-5 bg-light border w-75 m-auto p-3 my-3">
-          <div class="d-flex flex-column align-items-center flex-grow-1">
-            <h3 class="text-center"><%= link_to recipe.name, recipe_path(id: recipe.id), class: "text-dark" %></h3>
-            <%= link_to "REMOVE", recipe_path(id: recipe.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
-          </div>
-          <div class="flex-grow-1" style="max-height: 200px; overflow: auto">
-            <p><%= recipe.description %></p>
-          </div>
-        </div>
-      <% end %>
+<h5 class="mb-2">Your Recipies (<%= @recipes.length %>)</h5>
+<hr />
+<div class="row">
+    <% @recipes.each do |recipe| %>
+     <%= render partial: "shared/recipe_display", locals: {recipe: recipe} %>
     <% end %>
-  <% end %>
+    <%= link_to 'Add Recipe', new_recipe_path %>
 </div>
