--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,40 +1,38 @@
-<div class="container d-flex flex-column align-items-center">
-  <h2>Add new recipe:</h2>
-  <%= turbo_frame_tag @recipe do %>
-    <%= form_with model: @recipe do |form| %>
-      <% if @recipe.errors.any? %>
-        <div class="alert alert-danger mt-4" role="alert">
-          <% @recipe.errors.full_messages.each do |message| %>
-            <div><%= message %></div>
-          <% end %>
+<div class="row  container-fluid">
+    <div class="mb-3 col-md-8 offset-md-2 inventory-card shadow">
+        <div class="card-body">
+        <h5 class="card-title">😊 Create a new recipe!!</h5>
+        <p class="card-text"> Would'nt it be nice to store a recipe of your favourite food? Go ahead!</p>
+            <%= form_with model: @recipe, url: recipes_path do |f| %>
+                <div class="mb-3">
+                    <%= f.file_field :image, class: 'form-control' %>
+                    <%= f.label :image, 'Choose an image that would appear as banner for recipe', class: 'mb-2' %>
+                </div>
+                <div class="form-floating mb-3">
+                    <%= f.text_field :name, class: 'form-control', required: true %>
+                    <%= f.label :name, "Recipe Name*" %>
+                </div>
+                <div class="form-floating mb-3">
+                    <%= f.number_field :preparation_time, class: 'form-control', required: true %>
+                    <%= f.label :preparation_time, "Preparation Time in mins*" %>
+                </div>
+                <div class="form-floating mb-3">
+                    <%= f.number_field :cooking_time, class: 'form-control', required: true %>
+                    <%= f.label :cooking_time, "Cooking Time in mins*" %>
+                </div>
+                <div class="form-floating mb-3">
+                    <%= f.text_area :description, class: 'form-control' %>
+                    <%= f.label :description, "Description" %>
+                </div>
+                <div class="form-check form-switch">
+                    <%= f.check_box :public, class: "form-check-input" %>
+                    <%= f.label :public, 'Mark public', class: "form-check-label" %> <br />
+                    <i style="color: var(--primary-color)"> This allows other users to see your recipe</i>
+                </div>
+                <div class="form-group mt-3">
+                    <%= f.submit '🥣 Create Recipe', class: "btn", style: "background-color: var(--primary-color); color: var(--white);", data: {disable_with: "Loading..."} %>
+                </div>
+            <% end %>
         </div>
-      <% end %>
-      <div class="form-group mb-3">
-        <%= form.label :name %>
-        <%= form.text_field :name, class: "form-control" , required: true %>
-      </div>
-
-      <div class="form-group mb-3">
-        <%= form.label :description %>
-        <%= form.text_area :description, class: "form-control", required: true %>
-      </div>
-
-      <div class="form-group mb-3">
-        <%= form.label :cooking_time %>
-        <%= form.number_field :cooking_time, step: 1, class: "form-control", required: true %>
-      </div>
-
-      <div class="form-group mb-3">
-        <%= form.label :preparation_time %>
-        <%= form.number_field :preparation_time, step: 1, class: "form-control", required: true %>
-      </div>
-
-      <div class="form-check form-switch mb-3">
-        <%= form.label :public, class: "form-check-label" %>
-        <%= form.check_box :public, class: "form-check-input" %>
-      </div>
-
-      <%= form.submit "Create", data: { turbo: false }, class: "btn btn-primary" %>
-    <% end %>
-  <% end %>
+    </div>
 </div>
