--- a/app/views/shared/_recipe_display.html.erb
+++ b/app/views/shared/_recipe_display.html.erb
@@ -13,7 +13,7 @@
         <p class="card-text"><%= recipe.description.length < 54 ? recipe.description : truncate(recipe.description, length: 100, omission: '...') %></p>
         <p class="card-text">
             <%= link_to '<i class="fa fa-eye" aria-hidden="true"></i> Show'.html_safe, recipe_path(recipe.id), class: 'btn btn-outline-info' %>
-            <%= link_to '<i class="fa fa-trash-o" aria-hidden="true"></i> Delete'.html_safe, recipe_path(recipe.id), method: :delete, data: { confirm: "Delete recipe #{recipe.name}?" }, class: 'btn btn-outline-danger' if can? :destroy, recipe %>
+            <%= link_to '<i class="fa fa-trash-o" aria-hidden="true"></i> Delete'.html_safe, recipe_path(recipe.id), method: :delete, data: { confirm: "Delete recipe #{recipe.name}?" }, class: 'btn btn-outline-danger' %>
         </p>
         <% if current_user %>
             <small class="text-muted" style="float:right"><%= recipe.public ? '<i class="fa fa-eye" aria-hidden="true"></i>'.html_safe : '' %></small>
