Update the views files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,6 +104,6 @@
     </div>
   </body>
   <footer>
-      Copyright &copy; <%= Time.now.year %> Developed by Clinton Mbonu & Samuel Chimfwembe
+      Copyright &copy; <%= Time.now.year %> Developed by forbadara & josphat Nkonde
   </footer>
 </html>
